# camera_waypoints_trigger

./: CMakeLists.txt  package.xml
include/camera_waypoints_trigger/: camera_screenshots_handler.hpp
include/periodic_image_capturer/: periodic_image_capturer.hpp
params/: home_wp.yaml  mini_plan.yaml  waypoints.yaml  waypoints_10m.yaml  waypoints_20m.yaml  waypoints_5m.yaml
src/: camera_screenshots_handler.cpp  periodic_image_capturer.cpp
